--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="instagram.com/ddewntra_"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/ddewntra_/><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="contact-form">
